--- a/react-frontend-irc/src/Assets/css/Button.css
+++ b/react-frontend-irc/src/Assets/css/Button.css
@@ -64,7 +64,7 @@
 .home-btn{
     box-shadow: 2px 2px 10px rgba(9, 255, 0, 0.099);
     background-color: rgb(255, 255, 255);
-    color: rgb(0, 255, 0);
+    color: rgb(3, 196, 3);
 }
 .back-btn{
     box-shadow: 2px 2px 10px rgba(21, 0, 255, 0.099);
@@ -78,7 +78,7 @@
 .login-btn{
     box-shadow: 2px 2px 10px rgba(255, 77, 0, 0.099);
     background-color: rgb(255, 255, 255);
-    color: rgb(255, 234, 0);
+    color: rgb(255, 217, 0);
 
 }
 .logout-btn{
@@ -86,8 +86,15 @@
     background-color: rgb(255, 255, 255);
     color: rgb(255, 0, 0);
     
-
 }
+
+.add-btn{
+    box-shadow: 2px 2px 10px rgba(195, 0, 255, 0.099);
+    background-color: rgb(255, 255, 255);
+    color: rgb(140, 0, 255);
+    
+}
+
 
 .xy-1 {
     bottom: 6%;
